--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
+    "antd": "^4.8.0",
     "axios": "^0.21.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
