--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
+    "antd": "^4.8.0",
     "axios": "^0.21.0",
     "react": "^16.14.0",
+    "react-admin": "^3.9.6",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
