--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.0",
     "chart.js": "^2.9.4",
     "classnames": "^2.2.6",
+    "number-to-date-month-name": "^1.0.2",
     "primeicons": "^4.0.0",
     "primereact": "^5.0.1",
     "react": "^16.14.0",
