--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.0",
     "chart.js": "^2.9.4",
     "classnames": "^2.2.6",
+    "date-format": "^3.0.0",
     "graphql": "^15.4.0",
     "number-to-date-month-name": "^1.0.2",
     "primeflex": "^2.0.0",
