--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "classnames": "^2.2.6",
     "date-format": "^3.0.0",
     "graphql": "^15.4.0",
+    "js-cookie": "^2.2.1",
     "number-to-date-month-name": "^1.0.2",
     "primeflex": "^2.0.0",
     "primeicons": "^4.0.0",
