--- a/package.json
+++ b/package.json
@@ -58,5 +58,5 @@
   "devDependencies": {
     "gh-pages": "^3.1.0"
   },
-  "homepage": "https://tombohub.github.io/vdora-client"
+  "homepage": "https://thyholyreads.com"
 }
