--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "workbench.colorCustomizations": {
-        "statusBar.background": "#093636",
-        "statusBar.foreground": "#e7e7e7",
+        "statusBar.background": "#091e36",
+        "statusBar.foreground": "#a7a2a2",
     },
 }
